refak: refactoring such that transaction entities serve as main objects within accounting core module (#11)
Co-authored-by: Mateusz Czeladka <mateusz.czeladka@cardanofoundation.org>